--- a/lib/blog_web/templates/post/show.html.heex
+++ b/lib/blog_web/templates/post/show.html.heex
@@ -26,7 +26,7 @@
 
 <h3>Leave your comment</h3>
 <%= form_for @comment_changeset, Routes.post_comment_path(@conn, :create, @post), fn f -> %>
-  <%= label f, :body %>
+  <%= label f, :comment%>
   <%= textarea f, :body %>
   <%= error_tag f, :body %>
   <div>
