auth_gen_auth_and_guardian

--- a/lib/blog_web/templates/post/index.html.heex
+++ b/lib/blog_web/templates/post/index.html.heex
@@ -1,4 +1,4 @@
-<h1>Listing Posts</h1>
+<h1>Posts</h1>
 
 <table>
   <thead>
@@ -27,4 +27,4 @@
   </tbody>
 </table>
 
-<span><%= link "New Post", to: Routes.post_path(@conn, :new) %></span>
+<span><%= link "Create your own post", to: Routes.post_path(@conn, :new) %></span>
