--- a/lib/blog_web/templates/post/form.html.heex
+++ b/lib/blog_web/templates/post/form.html.heex
@@ -1,4 +1,4 @@
-<.form let={f} for={@changeset} action={@action}>
+<%= form_for @changeset, @action, [multipart: true], fn f -> %>
   <%= if @changeset.action do %>
     <div class="alert alert-danger">
       <p>Oops, something went wrong! Please check the errors below.</p>
@@ -8,6 +8,10 @@
   <%= label f, :title %>
   <%= text_input f, :title %>
   <%= error_tag f, :title %>
+
+  <%= label f, :image %>
+  <%= file_input f, :image %>
+  <%= error_tag f, :image %>
 
   <%= label f, :summary %>
   <%= text_input f, :summary %>
@@ -20,4 +24,4 @@
   <div>
     <%= submit "Save" %>
   </div>
-</.form>
+<% end %>
