--- a/lib/blog_web/templates/post/show.html.heex
+++ b/lib/blog_web/templates/post/show.html.heex
@@ -33,7 +33,7 @@
   <%= textarea f, :body %>
   <%= error_tag f, :body %>
   <div>
-    <%= submit "Save" %>
+    <%= submit "Post comment" %>
   </div>
 <% end %>
 
