--- a/lib/blog_web/templates/post/index.html.heex
+++ b/lib/blog_web/templates/post/index.html.heex
@@ -5,7 +5,7 @@
     <tr>
       <th>Title</th>
       <th>Summary</th>
-      <th>Body</th>
+      <th>Picture</th>
 
       <th></th>
     </tr>
@@ -15,9 +15,13 @@
     <tr>
       <td><%= link(post.title, to: Routes.post_path(@conn, :show, post)) %></td>
       <td><%= post.summary %></td>
-      <td><%= post.body %> </td>
+      <td><img src={Blog.Image.url({post.image, post}, signed: true)}, width="377" hieght="120"> </td>
       <td>
         <span><%= link "Show", to: Routes.post_path(@conn, :show, post) %></span>
+        <%= if @current_user && @current_user.id == post.user_id do %>
+          <span><%= link "Edit", to: Routes.post_path(@conn, :edit, post) %></span>
+          <span><%= link "Delete", to: Routes.post_path(@conn, :delete, post), method: :delete, data: [confirm: "Are you sure"] %></span>
+        <% end %>
       </td>
     </tr>
 <% end %>
