--- a/lib/blog_web/templates/post/show.html.heex
+++ b/lib/blog_web/templates/post/show.html.heex
@@ -21,9 +21,13 @@
   </li>
 
 </ul> 
-<span><%= link "Edit", to: Routes.post_path(@conn, :edit, @post) %></span> 
+
+<%= if @current_user && @current_user.id == @post.user_id do %>
+<span><%= link "Edit", to: Routes.post_path(@conn, :edit, @post) %></span>
 <span><%= link "Delete", to: Routes.post_path(@conn, :delete, @post), method: :delete, data: [confirm: "Are you sure"] %></span>
+<% end %>
 <span><%= link "Back", to: Routes.post_path(@conn, :index) %></span> 
+
 
 <h3>Leave your comment</h3>
 <%= form_for @comment_changeset, Routes.post_comment_path(@conn, :create, @post), fn f -> %>
